--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const defaultCards = [
 
 --- 
 
-<Layout title="Preezeo">
+<Layout title="Preezeo la borne qu'il vous faut !">
     <section class="flex flex-col gap-14 justify-start w-fit ml-auto mr-auto mt-8 lg:mt-0 lg:mr-[12%]">
         <Headline />
         <p class="font-medium tracking-3 text-sm md:max-w-[650px]">
