--- a/src/pages/infrastructures.astro
+++ b/src/pages/infrastructures.astro
@@ -32,7 +32,7 @@ const cards = [
 ]
 ---
 
-<Layout title="Preezeo">
+<Layout title="Preezeo - Infrastructures collectives">
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
     </section>
