--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -35,7 +35,7 @@ const steps = [
 ---
 
 
-<Layout title="Preezeo">
+<Layout title="Preezeo - Installation et Maintenance">
 
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
