--- a/src/pages/particuliers.astro
+++ b/src/pages/particuliers.astro
@@ -88,7 +88,7 @@ const bigCards = [
 </script>
 
 
-<Layout title="Preezeo">
+<Layout title="Preezeo - Particulier">
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
     </section>
