--- a/src/pages/prices.astro
+++ b/src/pages/prices.astro
@@ -13,7 +13,7 @@ import H1 from '../components/H1.astro';
 ---
 
 
-<Layout title="Preezeo">
+<Layout title="Preezeo - Tarifs">
 
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
