--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -59,7 +59,7 @@ const products = [
 ---
 
 
-<Layout title="Preezeo">
+<Layout title="Preezeo - Produits">
 
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
