--- a/src/pages/professionnels.astro
+++ b/src/pages/professionnels.astro
@@ -32,7 +32,7 @@ const cards = [
 ]
 ---
 
-<Layout title="Preezeo">
+<Layout title="Preezeo - Professionnels">
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
     </section>
@@ -59,7 +59,7 @@ const cards = [
 
     <Section c="lg:px-6">
         <div class="flex flex-col gap-10 lg:px-20">
-            <p class="font-medium text-xl">
+            <p class="font-medium text-[19px]">
                 Bienvenue chez <span class="text-purple font-bold">PREEZEO</span>, votre Partenaire de Confiance pour une Mobilité Électrique Performante.
                 <br>
                 <br>
