--- a/src/components/ProjectStripe.astro
+++ b/src/components/ProjectStripe.astro
@@ -1,6 +1,7 @@
 ---
 import Image from './atom/Image.astro';
 import Button from './atom/Button.astro';
+import ButtonContact from './ButtonContact.astro';
 ---
 
 <article class="flex items-stretch gap-5 max-w-[625px]">
@@ -28,7 +29,7 @@ import Button from './atom/Button.astro';
             <span class="font-montserrat font-medium text-sm leading-1">étudie chaque configuration.</span>
         </p>
         <div class="lg:w-1/2">
-            <Button 
+            <ButtonContact
                 text="Mon étude"
                 color="blue"
                 fullWidth={true}
