--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -2,20 +2,19 @@
 import Image from "../components/atom/Image.astro";
 
 const linksFirstColumn = [
-    {name: 'Contact', link: '/contact'},
-    {name: 'Qui sommes nous', link: '/about'},
-    {name: 'Financement', link: '/funding'},
+    {name: 'Contact', link: '/contacts'},
+    {name: 'Qui sommes nous', link: '/a-propos'},
+    {name: 'Subventions', link: '/subventions'},
     {name: 'Informations Utiles', link: '/informations'},
-    {name: 'FAQ', link: '#'},
 ]
 
 const linksSecondColumn = [
     {name: 'Particulier', link: '/particuliers'},
-    {name: 'Infrastructure collective', link: '/infrastructure'},
+    {name: 'Infrastructure collective', link: '/infrastructures'},
     {name: 'Professionnel', link: '/professionnels'},
     {name: 'Installation et Maintenance', link: '/installation'},
-    {name: 'Tarifs', link: '/prices'},
-    {name: 'Produits', link: '/products'},
+    {name: 'Tarifs', link: '/tarifs'},
+    {name: 'Produits', link: '/produits'},
 ]
 
 const subLinks = [
