--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,7 +47,7 @@ const { title } = Astro.props;
 		<link rel="preload" as="image" href="/img/logo_purple.svg" type="image/svg+xml" />
 		<title>{title}</title>
 	</head>
-	<body class="flex flex-col bg-light font-montserrat text-base leading-[140%]">
+	<body class="flex flex-col bg-light font-montserrat text-base font-normal leading-[140%]">
 		<Header />	
 		<main class="wrapper">
 			<slot />
