--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -9,15 +9,17 @@ import Alert from '../components/atom/Alert.astro';
 import Image from '../components/atom/Image.astro';
 import Button from '../components/atom/Button.astro';
 import H1 from '../components/H1.astro';
+import ButtonContact from '../components/ButtonContact.astro'
+
 
 const steps = [
     {
         icon: 'message', 
-        text: `Vous prenez <a href="/contact" class="text-purple">contact</a> avec nous par mail ou par téléphone en nous exposant votre projet de recharge pour votre véhicule électrique.`, 
+        text: `Vous prenez <a href="/contacts" class="text-purple">contact</a> avec nous par mail ou par téléphone en nous exposant votre projet de recharge pour votre véhicule électrique.`, 
     },
     {
-        icon: 'phone', 
-        text: `Un de nos électricien agrée IRVE vous propose une <a href="/contact" class="text-purple">visite technique</a> afin d’étudier votre installation électrique.`, 
+        icon: 'hand-phone', 
+        text: `Un de nos électricien agrée IRVE vous propose une <a href="/contacts" class="text-purple">visite technique</a> afin d’étudier votre installation électrique.`, 
     },
     {
         icon: 'list', 
@@ -28,7 +30,7 @@ const steps = [
         text: `Après acceptation du devis et prise de rendez vous, votre technicien IRVE vient installer et sécuriser votre station de recharge et vous accompagne dans son utilisation. `, 
     },
     {
-        icon: 'list', 
+        icon: 'case', 
         text: `Vous êtes maintenant autonome en recharge électrique et très content de votre installation.<br> Votre technicien IRVE reste disponible pour toute question.`, 
     },
 ]
@@ -53,27 +55,25 @@ const steps = [
                         fetchPriority={true}
                     />
                 </div>
-                <svg width="377" height="99" viewBox="0 0 377 99" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="345.023" y="43" width="22.698" height="4.91639" rx="2.45819" fill="#FFB800"/>
-                    <rect x="335" y="55.8477" width="41.5086" height="4.941" rx="2.4705" fill="#FFB800"/>
-                    <path d="M356 96.0117V53.9998" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
-                    <line x1="355.507" y1="96.0035" x2="2.50349" y2="96.4965" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
-                    <path d="M5 3C5 1.61929 3.88071 0.5 2.5 0.5C1.11929 0.5 0 1.61929 0 3H5ZM5 96L5 3H0L0 96H5Z" fill="#FFB800"/>
-                </svg>
+                <Image 
+                    src="/img/svg/link-bottom.svg" 
+                    alt=""
+                    fetchPriority={true}
+                />
             </div>
         </div>
     </Section>
 
 
     <Section>
-        <div class="font-medium leading-[142%] text-sm">
+        <div class="leading-[142%] text-sm">
             <h2 class="flex flex-col font-bold mb-8">
                 <span>Nos marques partenaires</span>
                 <span class="bg-purple w-10 h-[3px]"></span>
             </h2>
-            <div class="mt-20 lg:mt-0 grid place-content-center w-full grid-cols-2 lg:mt-30 md:grid-cols-3 gap-8 lg:gap-10">
+            <div class="flex flex-wrap justify-center items-stretch mt-20 w-full lg:mt-30 gap-x-8 gap-y-20">
                 {steps.map((item, index) => (
-                    <div class="relative flex flex-col gap-4 bg-light-purple rounded-lg border border-purple pb-1 px-2 lg:px-8">
+                    <div class="max-w-[35Opx] w-[calc(50%-20px)] lg:w-[calc(33%-27px)] relative flex flex-col gap-4 bg-light-purple rounded-lg border border-purple pb-10">
                         <div class="absolute right-15 lg:right-8 -top-1 -translate-y-full max-h-[30px] max-w-[30px] lg:max-h-[75px] lg:max-w-[75px]">
                             {item?.icon?.length > 0 &&
                                 <Image 
@@ -82,12 +82,12 @@ const steps = [
                                 />
                             }
                         </div>
-                        <p class="relative text-purple font-medium text-[30px] w-fit">
+                        <p class="relative text-purple text-[30px] pl-2 lg:pl-5 w-fit">
                             étape
                             <span class="absolute -right-1 bottom-5 text-[70px] translate-x-full">{index + 1}</span>
                         </p>
 
-                        <p set:html={item.text}></p>
+                        <p class="px-2 lg:px-8" set:html={item.text}></p>
                     </div>
                 ))}
             </div>
@@ -96,16 +96,62 @@ const steps = [
 
 
     <Section>
-        <div class="font-medium leading-[142%] text-sm">
+        <div class="leading-[142%] text-sm">
             <h2 class="flex flex-col font-bold mb-8">
-                <span>Les accessoires</span>
+                <span>La Maintenance</span>
                 <span class="bg-purple w-10 h-[3px]"></span>
             </h2>
             <p>
-                Preezeo a choisi les marques les plus réputées et fiables dans le domaine des accessoires de sécurité, de comptage, de distribution et de raccordement électrique. 
+                Preezeo assure la maintenance de tout type de bornes même celles installées par une autre société. 
                 <br>
-                Parmi ces marques figurent Schneider, Siemens, Legrand, Hager et Michaud.
+                Nos techniciens assurent la maintenance de niveau 1 - 2 - 3. 
+                Nous travaillons sur les bornes modes 1 - 2 - 3 - 4.
+                <br>
+                Il est essentiel de noter que les bornes de recharge sont fabriquées en utilisant un processus électronique qui est à la fois complexe et délicat. 
+                Par conséquent, même la plus petite défaillance de certains composants peut entraîner des conséquences graves pour le bon fonctionnement de votre borne. Afin de prévenir de tels dysfonctionnements, il est fortement conseillé d'effectuer un entretien préventif . 
             </p>
+
+            <div class="flex justify-between flex-column lg:flex-row w-full gap-8 mt-8">
+                <div class="flex flex-col bg-light2 w-full rounded-xxl border border-purple p-6">
+                    <h3 class="flex flex-col mb-6">
+                        <span class="text-[30px] leading-[36px] font-semibold text-metal">Maintenance</span>
+                        <span class="text-[40px] leading-[48px] font-bold text-purple">Préventive</an>
+                    </h3>
+                    <p class="text-sm">
+                        Cet entretien a pour objectif de détecter à l'avance d'éventuelles anomalies et de prévenir certaines défaillances qui pourraient ultérieurement causer des pannes. 
+                        Il est donc important de veiller régulièrement à :
+                    </p>
+                    <ul class="text-sm pl-3">
+                        <li class="list-disc">Vérifier la connexion des câbles ;</li>
+                        <li class="list-disc">Contrôle des points de chauffes;</li>
+                        <li class="list-disc">Changer les filtres ;</li>
+                        <li class="list-disc">Dépoussiérer les composantes de la borne ;</li>
+                        <li class="list-disc">Vérifier le fonctionnement des différents éléments (disjoncteurs et autres).</li>
+                        <li class="list-disc">Et plus...</li>
+                        <li class="list-disc">Sur devis</li>
+                    </ul>
+                </div>
+
+                <div class="flex flex-col bg-light2 w-full rounded-xxl border border-purple p-6">
+                    <h3 class="flex flex-col mb-6">
+                        <span class="text-[30px] leading-[36px] font-semibold text-metal">Maintenance</span>
+                        <span class="text-[40px] leading-[48px] font-bold text-purple">Curative</an>
+                    </h3>
+                    <p class="text-sm">
+                        La gamme de contrats de maintenance curative se détaille en fonction des niveaux de compétences à mobiliser, des délais d'intervention attendus et de la zone géographique.
+                        <br><br>
+                        Si vous rencontrer un problème quelconque avec votre borne de recharge, vous pouvez nous faire parvenir votre demande via notre 
+                        <a href="/contacts">formulaire de contact</a>.
+                        <br>
+                        Nous interviendrons dans les meilleurs délais.
+                    </p>
+                </div>
+            </div>
+
+            <div class="w-fit mx-auto mt-7 lg:mt-14">
+                <ButtonContact />
+            </div>
+
         </div>
     </Section>
 
