--- a/src/pages/subventions.astro
+++ b/src/pages/subventions.astro
@@ -13,7 +13,7 @@ import H1 from '../components/H1.astro';
 ---
 
 
-<Layout title="Preezeo - Financement">
+<Layout title="Preezeo - Subventions">
 
     <section class="flex flex-col gap-14 justify-center text-center items-center mt-20">
         <Headline />
@@ -21,7 +21,7 @@ import H1 from '../components/H1.astro';
 
 
     <Section c="relative mt-20 ml-20">
-        <H1 text="le financement" />
+        <H1 text="les subventions" />
         <div class="flex gap-10 justify-between">
             <div class="link-svg ">
                 <div class="absolute -top-9 -right-5">
@@ -31,13 +31,11 @@ import H1 from '../components/H1.astro';
                         fetchPriority={true}
                     />
                 </div>
-                <svg width="377" height="99" viewBox="0 0 377 99" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="345.023" y="43" width="22.698" height="4.91639" rx="2.45819" fill="#FFB800"/>
-                    <rect x="335" y="55.8477" width="41.5086" height="4.941" rx="2.4705" fill="#FFB800"/>
-                    <path d="M356 96.0117V53.9998" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
-                    <line x1="355.507" y1="96.0035" x2="2.50349" y2="96.4965" stroke="#FFB800" stroke-width="5" stroke-linecap="round"/>
-                    <path d="M5 3C5 1.61929 3.88071 0.5 2.5 0.5C1.11929 0.5 0 1.61929 0 3H5ZM5 96L5 3H0L0 96H5Z" fill="#FFB800"/>
-                </svg>
+                <Image 
+                    src="/img/svg/link-bottom.svg" 
+                    alt=""
+                    fetchPriority={true}
+                />
             </div>
         </div>
     </Section>
