--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -172,7 +172,7 @@ import H1 from '../components/H1.astro';
             <div class="flex flex-col gap-6 grow-1 bg-metal text-blue px-8 py-10 rounded-xl">
                 <h2 class="text-base tracking-2 font-bold">Je suis ...</h2>
 
-                <form class="flex flex-col items-stretch gap-5 w-100" method="POST">
+                <form action="mailto:contact@preezeo.fr" method="get" class="flex flex-col items-stretch gap-5 w-100">
                     <div class="form_group flex flex-wrap gap-2">
                         <input type="radio" id="category_individual" value="individual" name="category" checked required />
                         <label for="category_individual">Particulier</label>
