--- a/src/pages/particuliers.astro
+++ b/src/pages/particuliers.astro
@@ -136,6 +136,7 @@ const bigCards = [
         <div class="house-view">
             <Section flex={true}>
                 <Tips
+                    size="small"
                     title="Le crédit d'impôts et taux de TVA réduit"
                 >
                     <p 
@@ -186,7 +187,7 @@ const bigCards = [
             <Section flex={true}>
                 <Tips
                     title="Combien coûte la recharge en maison individuelle ?"
-                    isBig={true}
+                    size="medium"
                 >
                     <p 
                         slot="text"
@@ -271,7 +272,7 @@ const bigCards = [
                 <ButtonContact />
             </Section>
             <Section flex={true}>
-                <Tips>
+                <Tips size="small">
                     <p 
                         slot="text"
                         class="inline gap-1"
