--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,9 +33,9 @@ const { title } = Astro.props;
 		<meta name="copyright" content="Preezeo"/>
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="shortcut icon" type="image/x-icon" href="/favicon.svg" />
-		<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet"> -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<!-- <link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" /> -->
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link rel="preload" as="font" href="/fonts/Alien Robot.ttf" type="font/ttf" crossorigin="anonymous"/>
