--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -48,7 +48,7 @@ const steps = [
         <H1 text="Installation et Maintenance" />
         <div class="flex gap-10 justify-between">
             <div class="link-svg ">
-                <div class="absolute -top-12 -right-[28px]">
+                <div class="absolute -top-12 -right-[14px]">
                     <Image 
                         src="/img/logo/head.svg" 
                         alt="Head icon"
@@ -74,7 +74,7 @@ const steps = [
             <div class="flex flex-wrap justify-center items-stretch mt-20 w-full lg:mt-30 gap-x-8 gap-y-20">
                 {steps.map((item, index) => (
                     <div class="max-w-[35Opx] w-[calc(50%-20px)] lg:w-[calc(33%-27px)] relative flex flex-col gap-4 bg-light-purple rounded-lg border border-purple pb-10">
-                        <div class="absolute right-15 lg:right-8 -top-1 -translate-y-full max-h-[30px] max-w-[30px] lg:max-h-[75px] lg:max-w-[75px]">
+                        <div class="absolute right-15 md:right-8 -top-1 -translate-y-full max-h-[30px] max-w-[30px] md:max-h-[75px] md:max-w-[75px]">
                             {item?.icon?.length > 0 &&
                                 <Image 
                                     src={`/img/icons/${item.icon}.svg`}
@@ -84,7 +84,7 @@ const steps = [
                         </div>
                         <p class="relative text-purple text-[30px] pl-2 lg:pl-5 w-fit">
                             étape
-                            <span class="absolute -right-1 bottom-5 text-[70px] translate-x-full">{index + 1}</span>
+                            <span class="font-montserrat absolute -right-1 bottom-5 text-[70px] translate-x-full">{index + 1}</span>
                         </p>
 
                         <p class="px-2 lg:px-8" set:html={item.text}></p>
@@ -95,8 +95,8 @@ const steps = [
     </Section>
 
 
-    <Section>
-        <div class="leading-[142%] text-sm">
+    <Section smallBottomMargin={true}>
+        <div class="leading-[142%] text-sm max-w-[905px] mx-auto">
             <h2 class="flex flex-col font-bold mb-8">
                 <span>La Maintenance</span>
                 <span class="bg-purple w-10 h-[3px]"></span>
@@ -111,8 +111,8 @@ const steps = [
                 Par conséquent, même la plus petite défaillance de certains composants peut entraîner des conséquences graves pour le bon fonctionnement de votre borne. Afin de prévenir de tels dysfonctionnements, il est fortement conseillé d'effectuer un entretien préventif . 
             </p>
 
-            <div class="flex justify-between flex-column lg:flex-row w-full gap-8 mt-8">
-                <div class="flex flex-col bg-light2 w-full rounded-xxl border border-purple p-6">
+            <div class="flex justify-between flex-col lg:flex-row w-full gap-8 mt-8">
+                <div class="flex flex-col h-fit bg-light2 w-full rounded-xxl border border-purple p-6">
                     <h3 class="flex flex-col mb-6">
                         <span class="text-[30px] leading-[36px] font-semibold text-metal">Maintenance</span>
                         <span class="text-[40px] leading-[48px] font-bold text-purple">Préventive</an>
@@ -132,7 +132,7 @@ const steps = [
                     </ul>
                 </div>
 
-                <div class="flex flex-col bg-light2 w-full rounded-xxl border border-purple p-6">
+                <div class="flex flex-col h-fit bg-light2 w-full rounded-xxl border border-purple p-6">
                     <h3 class="flex flex-col mb-6">
                         <span class="text-[30px] leading-[36px] font-semibold text-metal">Maintenance</span>
                         <span class="text-[40px] leading-[48px] font-bold text-purple">Curative</an>
@@ -151,8 +151,35 @@ const steps = [
             <div class="w-fit mx-auto mt-7 lg:mt-14">
                 <ButtonContact />
             </div>
-
         </div>
+    </Section>
+
+    <Section>
+        <Tips size="big">
+            <p 
+                slot="text"
+                class="inline gap-1"
+            >
+                <span class="text-metal text-[19px] tracking-3 leading-[142%]">
+                    Il est important de prendre en compte les conséquences néfastes des impacts répétés sur votre borne de recharge. 
+                    <br>
+                    Il est préférable de choisir un emplacement qui minimise les risques de collision avec votre véhicule électrique. 
+                    <br>
+                    Si votre borne a subi un choc important qui a endommagé sa coque, il est recommandé de faire appel à un technicien pour vérifier son bon fonctionnement et effectuer les réparations nécessaires, le cas échéant.
+                    <br>
+                    L'utilisation d'un câble de recharge de qualité médiocre peut entraîner des problèmes de faux contacts au niveau du socle de prise, en particulier lorsqu'il s'agit d'un câble de recharge de Type 2.
+                    <br><br>
+                    Le vandalisme et les dégradations intentionnelles ou de catastrophes naturelles.
+                    Cela peut occasionner des dégâts importants et requérir l'intervention d'un technicien pour une maintenance curative.
+                    <br><br>
+                    Il est crucial de souligner que lorsqu'un problème survient, l'intervention de maintenance nécessite une expertise complète. La panne peut être d'origine technique, nécessitant le remplacement immédiat d'une pièce défectueuse. 
+                    <br>
+                    Dans d'autres cas, la panne peut résulter d'un problème logiciel, nécessitant une reprogrammation.
+                    <br><br>
+                    Il est impératif que l'intervention sur une borne de recharge soit effectuée par un professionnel qualifié. Cela s'applique également à la maintenance. Il est fortement déconseillé de démonter vous-même votre borne de recharge, car cela pourrait entraîner des dommages irréparables.
+                </span>
+            </p>
+        </Tips>
     </Section>
 
 </Layout>
