--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,5 +1,10 @@
 @use 'variables' as *;
 
+@font-face {
+    font-family: "alien";
+    src: url("../fonts/Alien.ttf") format("truetype");      
+}
+
 *, ::after, ::before {
     margin: 0;
     padding: 0;
