--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -146,7 +146,7 @@ const defaultCards = [
     </Section>
 
     <Section c="hidden lg:block" flex={true}>
-        <Tips btn={true}>
+        <Tips btn={true} size="small">
             <p 
                 slot="text"
                 class="inline gap-1"
@@ -251,7 +251,7 @@ const defaultCards = [
     <section class="flex align-center justify-center mb-10 md:mb-[250px] max-w-[75vw] md:max-w-fit mx-auto">
         <Tips
             title="Offre de parrainage"
-            isBig={true}
+            size="medium"
             btn={true}
         >
             <p 
