--- a/src/pages/infrastructures.astro
+++ b/src/pages/infrastructures.astro
@@ -40,7 +40,7 @@ const cards = [
     <Section c="relative mt-20 ml-20">
         <H1 text="pour infrastructures collectives" />
         <div class="link-svg">
-            <div class="absolute -top-9 -right-3">
+            <div class="absolute -top-11 -right-3">
                 <Image 
                     src="/img/icons/apartement.svg" 
                     alt="apartement icon"
@@ -101,7 +101,7 @@ const cards = [
     </Section>
 
     <Section flex={true} smallBottomMargin={true}>
-        <Tips>
+        <Tips size="small">
             <p 
                 slot="text"
                 class="inline gap-1"
@@ -109,7 +109,7 @@ const cards = [
                 <span class="font-medium text-[19px] tracking-3 leading-[142%]">
                     Le montant maximal d’aide versée est fixé pour les infrastructures collectives (hors travaux de voirie extérieur) à 4000 euros jusqu’à 50 places. Augmenté de 75 euros par place supplémentaire. 
                     Dans la limité de 15 000 euros au total par copropriété. 
-                    <br><a href="https://www.ecologie.gouv.fr/" target="_blank" class="font-semibold link-effect spacing">Téléchargez le guide du gouvernement</a>
+                    <br><a href="/doc/guide.pdf" target="_blank" class="font-semibold link-effect spacing">Téléchargez le guide du gouvernement</a>
                 </span>
             </p>
         </Tips>
