--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -4,6 +4,7 @@ import Headline from '../components/Headline.astro';
 import Section from '../components/Section.astro';
 import Image from '../components/atom/Image.astro';
 import H1 from '../components/H1.astro';
+import PageHero from '../components/PageHero.astro';
 
 ---
 
@@ -14,23 +15,10 @@ import H1 from '../components/H1.astro';
     </section>
 
 
-    <Section c="relative mt-20 ml-20">
+    <Section c="relative mt-20 xl:ml-20">
         <H1 text="Qui sommes nous ?" />
         <div class="flex gap-10 justify-between">
-            <div class="link-svg ">
-                <div class="absolute -top-12 -right-[15px]">
-                    <Image 
-                        src="/img/logo/head.svg" 
-                        alt="Head icon"
-                        fetchPriority={true}
-                    />
-                </div>
-                <Image 
-                    src="/img/svg/link-bottom.svg" 
-                    alt=""
-                    fetchPriority={true}
-                />
-            </div>
+            <PageHero icon="head"/>
         </div>
     </Section>
 
