--- a/src/pages/legals.astro
+++ b/src/pages/legals.astro
@@ -9,6 +9,7 @@ import Alert from '../components/atom/Alert.astro';
 import Image from '../components/atom/Image.astro';
 import Button from '../components/atom/Button.astro';
 import H1 from '../components/H1.astro';
+import PageHero from '../components/PageHero.astro';
 
 ---
 
@@ -20,24 +21,10 @@ import H1 from '../components/H1.astro';
     </section>
 
 
-    <Section c="relative mt-20 ml-20">
+    <Section c="relative mt-20 xl:ml-20">
         <H1 text="Mentions légales" />
         <div class="flex gap-10 justify-between">
-            <div class="link-svg ">
-                <div class="absolute -top-11 -right-[17px]">
-                    <Image 
-                        src="/img/icons/legals.svg" 
-                        alt="Head icon"
-                        fetchPriority={true}
-                    />
-                </div>
-
-                <Image 
-                    src="/img/svg/link-bottom.svg" 
-                    alt=""
-                    fetchPriority={true}
-                />
-            </div>
+            <PageHero icon="legals"/>
         </div>
     </Section>
 
