--- a/src/pages/professionnels.astro
+++ b/src/pages/professionnels.astro
@@ -9,6 +9,7 @@ import ButtonContact from '../components/ButtonContact.astro';
 import Image from '../components/atom/Image.astro';
 import Button from '../components/atom/Button.astro';
 import H1 from '../components/H1.astro';
+import PageHero from '../components/PageHero.astro';
 
 
 const bigCards = [
@@ -37,22 +38,9 @@ const cards = [
         <Headline />
     </section>
 
-    <Section c="relative mt-20 ml-20">
+    <Section c="relative mt-20 xl:ml-20">
         <H1 text="pour infrastructures professionnels" />
-        <div class="link-svg">
-            <div class="absolute -top-9 -right-5">
-                <Image 
-                    src="/img/icons/building.svg" 
-                    alt="apartement icon"
-                    fetchPriority={true}
-                />
-            </div>
-            <Image 
-                src="/img/svg/link-bottom.svg" 
-                alt=""
-                fetchPriority={true}
-            />
-        </div>
+        <PageHero icon="building"/>
     </Section>
 
     <Section c="lg:px-6">
@@ -108,7 +96,7 @@ const cards = [
     </Section>
 
     <Section flex={true} smallBottomMargin={true}>
-        <Tips btn={true}>
+        <Tips btn={true} size="small">
             <p 
                 slot="text"
                 class="inline gap-1"
