--- a/src/pages/subventions.astro
+++ b/src/pages/subventions.astro
@@ -9,6 +9,7 @@ import Alert from '../components/atom/Alert.astro';
 import Image from '../components/atom/Image.astro';
 import Button from '../components/atom/Button.astro';
 import H1 from '../components/H1.astro';
+import PageHero from '../components/PageHero.astro';
 
 ---
 
@@ -19,27 +20,12 @@ import H1 from '../components/H1.astro';
         <Headline />
     </section>
 
-
-    <Section c="relative mt-20 ml-20">
+    <Section c="relative mt-20 xl:ml-20">
         <H1 text="les subventions" />
         <div class="flex gap-10 justify-between">
-            <div class="link-svg ">
-                <div class="absolute -top-9 -right-5">
-                    <Image 
-                        src="/img/icons/money.svg" 
-                        alt="Head icon"
-                        fetchPriority={true}
-                    />
-                </div>
-                <Image 
-                    src="/img/svg/link-bottom.svg" 
-                    alt=""
-                    fetchPriority={true}
-                />
-            </div>
+            <PageHero icon="money"/>
         </div>
     </Section>
-
 
     <Section smallBottomMargin={true}>
         <div class="flex flex-col gap-6">
