Modification valeur Capital et numero RCS

--- a/src/pages/legals.astro
+++ b/src/pages/legals.astro
@@ -49,8 +49,8 @@ import H1 from '../components/H1.astro';
 
             <h2 class="text-purple font-bold">ÉDITEUR DU SITE</h2>
             <p>
-                PREEZO.fr est édité par <b>PREEZEO</b>, SASU au capital de 7500 €.
-                <br>Numéro de RCS : 000 000 000 - Numéro de TVA : FR0000000000
+                PREEZO.fr est édité par <b>PREEZEO</b>, SASU au capital de 6000 €.
+                <br>Numéro de RCS Bayonne : 980253629 - Numéro de TVA : FR65980253629
                 <br>Siège social : 57 avenue du Marechal Juin, 64200 Biarritz
                 <br>Directeur de publication : PREEZEO SASU
                 <br>Contact : contact@preezeo.fr
